feat: AI 工作流(工作流核心特性实战)
- 条件边，根据生成项目的类型确定是否跳过项目构建
- 循环边，添加代码质量检查节点，如果检查不通过则重新回到网站生成节点进行生成